--- a/public/signUp/index.html
+++ b/public/signUp/index.html
@@ -5,16 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 
 <body>
     <div id="form">
+        <h1>Signup</h1>
         <input type="text" name="first_name" placeholder="First Name" id="first_name">
         <input type="text" name="last_name" placeholder="Last Name" id="last_name">
         <input type="email" name="email" id="email" placeholder="Email">
         <input type="password" name="password" id="password" placeholder="Password">
         <input type="password" name="confirmPassword" id="confirm_password" placeholder="Confirm Password">
+        <p id="message">This password is incorrect</p>
         <button id="signup_btn">submit</button>
     </div>
     <script src="./dom.js"></script>
