--- a/public/signIn/index.html
+++ b/public/signIn/index.html
@@ -1,16 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
-    <form action="/signin" method="post">
-        <input id="email-input" name="email" type="email" placeholder="Email"/>
-        <input id="password-input" name="password" type="password" placeholder="password"/>
-        <button type="submit">SIGN IN</button>
-    </form>
+    <header>
+        <h1>Apple</h1>
+        <ul>
+            <li>iPhone</li>
+            <li>iPad</li>
+            <li>MacBook</li>
+            <li>Mac</li>
+            <li>Apple TV</li>
+        </ul>
+        <a href="./index.html">login</a>
+        <a href="../signUp/index.html">signup</a>
+        <a href="/cart"><i class="fa-solid fa-cart-shopping"></i></a>
+    </header>
+    <main>
+        <form action="/signin" method="post">
+            <h1>Login in </h1>
+            <input id="email-input" name="email" type="email" placeholder="Email" />
+            <input id="password-input" name="password" type="password" placeholder="password" />
+            <button type="submit">SIGN IN</button>
+        </form>
+    </main>
 </body>
+
 </html>
