added the response to the client relates #21

--- a/public/signUp/index.html
+++ b/public/signUp/index.html
@@ -15,12 +15,12 @@
         <ul>
             <li>iPhone</li>
             <li>iPad</li>
-            <li>Macbook</li>
+            <li>MacBook</li>
             <li>Mac</li>
             <li>Apple TV</li>
         </ul>
-        <a href="/signin">login</a>
-        <a href="/signin">signup</a>
+        <a href="../signIn/index.html">login</a>
+        <a href="./index.html">signup</a>
         <a href="/cart"><i class="fa-solid fa-cart-shopping"></i></a>
     </header>
     <main>
@@ -31,7 +31,7 @@
             <input type="email" name="email" id="email" placeholder="Email">
             <input type="password" name="password" id="password" placeholder="Password">
             <input type="password" name="confirmPassword" id="confirm_password" placeholder="Confirm Password">
-            <p id="message">This password is incorrect</p>
+            <p id="message"></p>
             <button id="signup_btn">submit</button>
         </div>
     </main>
