edit navbar and edit buttons ,  connect the buttons in home page with shooping page , edit title of the pages , edit styling of the buttons and search bar related #25

--- a/public/index.html
+++ b/public/index.html
@@ -6,21 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-    <title>Document</title>
+    <title>Home Page</title>
 </head>
 <body>
     <header>
         <!-- -------------------------------------- Start About Navbar -------------------------------------- -->
-        <nav class="navbar">
-            <a href="#">LOGO</a>
-            
-            <div class="navbarItem">
-                <a href="#">iPhone</a>
-                <a href="#">Mac</a>
-                <a href="#">iPad</a>
-            </div>
-            
-        </nav>
+            <h1>Apple</h1>
+            <ul>
+              <li>iPhone</li>
+              <li>iPad</li>
+              <li>Macbook</li>
+              <li>Mac</li> 
+              <li>Apple TV</li>
+            </ul>
+            <a href="/signin">login</a>
+            <a href="/signin">signup</a>
+            <a href="/cart"><i class="fa-solid fa-cart-shopping"></i></a>
         <!-- -------------------------------------- End About Navbar -------------------------------------- -->
     </header>
     <!-- -------------------------------------- Start About Main -------------------------------------- -->
@@ -29,7 +30,7 @@
             <h2>iPhone 13 pro max</h2>
             <p>iPhone 13 pro max available !!</p>
             <img src="https://ihouse.fra1.digitaloceanspaces.com/images/ViskIXGAmmkMxIw0ogCktph8K9qPryiei5cYpFlG.png" alt="iPhone13">
-            <a class="btn" href="#">Click Here</a>
+            <a class="btn" href="./shoppingPage/index.html">Click Here</a>
         </div>
 
         <div class="productionPage">
@@ -37,7 +38,7 @@
                 <div class="descriptionProduct">
                     <h3>iMac</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae aliquam, cum voluptates dolore tempore repellendus dolores</p>
-                    <a class="btn" href="#">Click Here</a>
+                    <a class="btn" href="./shoppingPage/index.html">Click Here</a>
                 </div>
                 <div class="imgProduct">
                     <img src="./assets/imac-removebg-preview.png" alt="imac">
@@ -47,7 +48,7 @@
                 <div class="descriptionProduct">
                     <h3>Apple Watch</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae aliquam, cum voluptates dolore tempore repellendus dolores</p>
-                    <a class="btn" href="#">Click Here</a>
+                    <a class="btn" href="./shoppingPage/index.html">Click Here</a>
                 </div>
                 <div class="imgProduct">
                     <img src="./assets/apple-watch.png" alt="apple-watch">
@@ -57,7 +58,7 @@
                 <div class="descriptionProduct">
                     <h3>iPhone</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae aliquam, cum voluptates dolore tempore repellendus dolores</p>
-                    <a class="btn" href="#">Click Here</a>
+                    <a class="btn" href="./shoppingPage/index.html">Click Here</a>
                 </div>
                 <div class="imgProduct">
                     <img src="./assets/iphone-13.png" alt="imac">
@@ -67,7 +68,7 @@
                 <div class="descriptionProduct">
                     <h3>Airpods</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae aliquam, cum voluptates dolore tempore repellendus dolores</p>
-                    <a class="btn" href="#">Click Here</a>
+                    <a class="btn" href="./shoppingPage/index.html">Click Here</a>
                 </div>
                 <div class="imgProduct">
                     <img src="./assets/airpods.png" alt="imac">
@@ -82,7 +83,7 @@
             <div class="descriptionRandomProduct">
                 <h3>Some Product</h3>
                 <p>Lorem ipsum dolor sit amet consectetur</p>
-                <a class="btn" href="#">Click Here</a>
+                <a class="btn" href="./shoppingPage/index.html">Click Here</a>
             </div>
         </div>
 
@@ -90,7 +91,7 @@
             <div class="descriptionRandomProduct">
                 <h3>Some Product</h3>
                 <p>Lorem ipsum dolor sit amet consectetur</p>
-                <a class="btn" href="#">Click Here</a>
+                <a class="btn" href="./shoppingPage/index.html">Click Here</a>
             </div>
             <div class="img">
                 <img src="./assets/random2.png" alt="laptop">
