--- a/public/shoppingPage/index.html
+++ b/public/shoppingPage/index.html
@@ -6,21 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-    <title>Document</title>
+    <title>Shopping Page</title>
 </head>
 <body>
     <header>
-        <nav class="navbar">
-            <a href="#">LOGO</a>
-            
-            <div class="navbarItem">
-                <a href="#">iPhone</a>
-                <a href="#">Mac</a>
-                <a href="#">iPad</a>
-            </div>
-            
-        </nav>
-    </header>
+        <h1>Apple</h1>
+        <ul>
+          <li>iPhone</li>
+          <li>iPad</li>
+          <li>Macbook</li>
+          <li>Mac</li> 
+          <li>Apple TV</li>
+        </ul>
+        <a href="/signin">login</a>
+        <a href="/signin">signup</a>
+        <a href="/cart"><i class="fa-solid fa-cart-shopping"></i></a>
+      </header>
     <main>
             <section id="filtter">
                 <div id="path">
