linking logo page to go in home page in all pages

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
 <body>
     <header>
         <!-- -------------------------------------- Start About Navbar -------------------------------------- -->
-            <h1>Apple</h1>
-            <ul>
+        <a href="/"><h1>Apple</h1></a>
+        <ul>
               <li>iPhone</li>
               <li>iPad</li>
               <li>Macbook</li>
