--- a/public/shoppingPage/index.html
+++ b/public/shoppingPage/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>Apple</h1>
+    <a href="/"><h1>Apple</h1></a> 
         <ul>
           <li>iPhone</li>
           <li>iPad</li>
