--- a/public/signUp/index.html
+++ b/public/signUp/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <h1>Apple</h1>
+        <a href="/"><h1>Apple</h1></a>
         <ul>
             <li>iPhone</li>
             <li>iPad</li>
