--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
               <li>Apple TV</li>
             </ul>
             <a href="/signin">login</a>
-            <a href="/signin">signup</a>
+            <a href="/signUp">signup</a>
             <a href="/cart"><i class="fa-solid fa-cart-shopping"></i></a>
         <!-- -------------------------------------- End About Navbar -------------------------------------- -->
     </header>
