edit endpoint path in html file.

--- a/public/cart/index.html
+++ b/public/cart/index.html
@@ -19,7 +19,7 @@
       <li>Apple TV</li>
     </ul>
     <a href="/signin">login</a>
-    <a href="/signin">signup</a>
+    <a href="/signup">signup</a>
     <a href="/cart"><i class="fa-solid fa-cart-shopping"></i></a>
   </header>
   <main>
