--- a/public/signIn/index.html
+++ b/public/signIn/index.html
@@ -11,7 +11,9 @@
 
 <body>
     <header>
-        <a href="/"><h1>Apple</h1></a>
+        <a href="/">
+            <h1>Apple</h1>
+        </a>
         <ul>
             <li>iPhone</li>
             <li>iPad</li>
@@ -19,18 +21,20 @@
             <li>Mac</li>
             <li>Apple TV</li>
         </ul>
-        <a href="./index.html">login</a>
-        <a href="../signUp/index.html">signup</a>
+        <a href="/signin">login</a>
+        <a href="/signup">signup</a>
         <a href="/cart"><i class="fa-solid fa-cart-shopping"></i></a>
     </header>
     <main>
-        <form action="/signin" method="post">
+        <div id="form">
             <h1>Login in </h1>
             <input id="email-input" name="email" type="email" placeholder="Email" />
             <input id="password-input" name="password" type="password" placeholder="password" />
-            <button type="submit">SIGN IN</button>
-        </form>
+            <button id="btn">LOGIN IN</button>
+        </div>
+
     </main>
+    <script src="./dom.js"></script>
 </body>
 
 </html>
