Create logout endpoint and an error message to the existing email relates #37

--- a/public/cart/index.html
+++ b/public/cart/index.html
@@ -1,44 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./style.css" />
   <title>CART</title>
 </head>
+
 <body>
   <header>
-    <a href="/"><h1>Apple</h1></a>
+    <a href="/">
+      <h1>Apple</h1>
+    </a>
     <ul>
       <li>iPhone</li>
       <li>iPad</li>
       <li>Macbook</li>
-      <li>Mac</li> 
+      <li>Mac</li>
       <li>Apple TV</li>
     </ul>
-    <a href="/signin">login</a>
-    <a href="/signup">signup</a>
+    <div>
+      <a href="/signin" id="login">login</a>
+      <a href="/signup" id="signup">signup</a>
+    </div>
     <a href="/cart"><i class="fa-solid fa-cart-shopping"></i></a>
   </header>
   <main>
     <h1>Cart</h1>
     <div class="container">
-      <!-- <div class="product">
-        <div><img src="https://i.ibb.co/y5X6Yrb/Visk-IXGAmmk-Mx-Iw0og-Cktph8-K9q-Pryiei5c-Yp-Fl-G.png" /></div>
-        <div class="info">
-          <h2>Iphone 13 pro</h2>
-          <div class="count">
-            <i class="fa-solid fa-minus"></i>
-            <p>1</p>
-            <i class="fa-solid fa-plus"></i>
-          </div>
-          <i class="fa-solid fa-trash"></i>
-        </div>
-      </div> -->
     </div>
   </main>
   <script src="./dom.js"></script>
 </body>
+
 </html>
