--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,10 @@
             <li>Mac</li>
             <li>Apple TV</li>
         </ul>
-        <a href="/signin">login</a>
-        <a href="/signUp">signup</a>
+        <div>
+            <a href="/signin" id="login">login</a>
+            <a href="/signup" id="signup">signup</a>
+        </div>
         <!-- -------------------------------------- End About Navbar -------------------------------------- -->
     </header>
     <!-- -------------------------------------- Start About Main -------------------------------------- -->
@@ -34,7 +36,7 @@
             <p>iPhone 13 pro max available !!</p>
             <img src="https://ihouse.fra1.digitaloceanspaces.com/images/ViskIXGAmmkMxIw0ogCktph8K9qPryiei5cYpFlG.png"
                 alt="iPhone13">
-            <a class="btn" href="./shoppingPage/index.html">Click Here</a>
+            <a class="btn" href="/shoppingPage">Click Here</a>
         </div>
 
         <div class="productionPage">
@@ -43,7 +45,7 @@
                     <h3>iMac</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae aliquam, cum voluptates
                         dolore tempore repellendus dolores</p>
-                    <a class="btn" href="./shoppingPage/index.html">Click Here</a>
+                    <a class="btn" href="/shoppingPage">Click Here</a>
                 </div>
                 <div class="imgProduct">
                     <img src="./assets/imac-removebg-preview.png" alt="imac">
@@ -54,7 +56,7 @@
                     <h3>Apple Watch</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae aliquam, cum voluptates
                         dolore tempore repellendus dolores</p>
-                    <a class="btn" href="./shoppingPage/index.html">Click Here</a>
+                    <a class="btn" href="/shoppingPage">Click Here</a>
                 </div>
                 <div class="imgProduct">
                     <img src="./assets/apple-watch.png" alt="apple-watch">
@@ -65,7 +67,7 @@
                     <h3>iPhone</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae aliquam, cum voluptates
                         dolore tempore repellendus dolores</p>
-                    <a class="btn" href="./shoppingPage/index.html">Click Here</a>
+                    <a class="btn" href="/shoppingPage">Click Here</a>
                 </div>
                 <div class="imgProduct">
                     <img src="./assets/iphone-13.png" alt="imac">
@@ -76,7 +78,7 @@
                     <h3>Airpods</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae aliquam, cum voluptates
                         dolore tempore repellendus dolores</p>
-                    <a class="btn" href="./shoppingPage/index.html">Click Here</a>
+                    <a class="btn" href="/shoppingPage">Click Here</a>
                 </div>
                 <div class="imgProduct">
                     <img src="./assets/airpods.png" alt="imac">
@@ -91,7 +93,7 @@
             <div class="descriptionRandomProduct">
                 <h3>Some Product</h3>
                 <p>Lorem ipsum dolor sit amet consectetur</p>
-                <a class="btn" href="./shoppingPage/index.html">Click Here</a>
+                <a class="btn" href="/shoppingPage">Click Here</a>
             </div>
         </div>
 
@@ -99,7 +101,7 @@
             <div class="descriptionRandomProduct">
                 <h3>Some Product</h3>
                 <p>Lorem ipsum dolor sit amet consectetur</p>
-                <a class="btn" href="./shoppingPage/index.html">Click Here</a>
+                <a class="btn" href="/shoppingPage">Click Here</a>
             </div>
             <div class="img">
                 <img src="./assets/random2.png" alt="laptop">
