--- a/public/cart/index.html
+++ b/public/cart/index.html
@@ -25,8 +25,8 @@
       <li>Apple TV</li>
     </ul>
     <div>
-      <a href="/signin" id="login">login</a>
-      <a href="/signup" id="signup">signup</a>
+      <a href="/signIn" id="login">login</a>
+      <a href="/signUp" id="signup">signup</a>
     </div>
     <a href="/cart"><i class="fa-solid fa-cart-shopping"></i></a>
   </header>
