--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,8 @@
             <li>Apple TV</li>
         </ul>
         <div>
-            <a href="/signin" id="login">login</a>
-            <a href="/signup" id="signup">signup</a>
+            <a href="/signIn" id="login">login</a>
+            <a href="/signUp" id="signup">signup</a>
         </div>
         <!-- -------------------------------------- End About Navbar -------------------------------------- -->
     </header>
