--- a/public/signUp/index.html
+++ b/public/signUp/index.html
@@ -19,8 +19,8 @@
             <li>Mac</li>
             <li>Apple TV</li>
         </ul>
-        <a href="/signin">login</a>
-        <a href="/signup">signup</a>
+        <a href="/signIn">login</a>
+        <a href="/signUp">signup</a>
         <a href="/cart"><i class="fa-solid fa-cart-shopping"></i></a>
     </header>
     <main>
